--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "@itentialopensource/artifact-template",
-  "version": "0.0.0",
-  "description": "Template for creating new artifacts",
+  "version": "0.0.1",
+  "description": "This Pre-Built Automation bundle contains use cases around Cisco Meraki",
   "scripts": {
     "setup-hooks": "sh ./scripts/setup-hooks.sh",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,16 +12,12 @@
     "test:integration": "cypress run --config-file ./test/cypress.json --spec \"./test/cypress/integration/cypressTests.spec.js\"",
     "cypress:open": "cypress open --config-file ./test/cypress.json"
   },
-  "repository": {
-    "type": "gitlab",
-    "hostname": "gitlab.com",
-    "path": "itentialopensource/pre-built-automations"
-  },
   "keywords": [
     "Itential",
     "IAP"
   ],
   "contributors": [
+    "Itential",
     "Itential"
   ],
   "author": "Itential",
@@ -41,5 +36,16 @@
     "mocha-junit-reporter": "^2.0.2",
     "r2": "^2.0.1"
   },
-  "IAPDependencies": {}
+  "IAPCategories": [],
+  "repository": {
+    "type": "gitlab",
+    "hostname": "gitlab.com",
+    "path": "itentialopensource/pre-built-automations"
+  },
+  "IAPDependencies": {
+    "@itential/app-workflow_engine": "",
+    "@itentialopensource/adapter-meraki": "",
+    "@itential/app-json_forms": ""
+  },
+  "name": "@itentialopensource/cisco-meraki-rest"
 }
