--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.6",
+  "version": "1.0.7-2023.2.0",
   "description": "This Pre-Built Automation bundle contains use cases around Cisco Meraki",
   "scripts": {
     "setup-hooks": "sh ./scripts/setup-hooks.sh",
